--- a/css/home_works.css
+++ b/css/home_works.css
@@ -195,8 +195,8 @@
 /*--------CHARACTERS---------*/
 
 .characters {
-    background: var(--black);
-}
+     background: var(--black);
+ }
 
 .characters-list {
     padding: 100px 0;
@@ -206,25 +206,52 @@
     gap: 15px;
 }
 
-.character-card {
+.person-card {
     border: 2px solid var(--orange);
-    padding: 10px;
-    width: 250px;
+    padding: 15px;
+    width: 500px;
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: center;
+    background-color: #2c2c2c;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease-in-out;
 }
 
-.character-photo {
+.person-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    background-color:  #2e3a59;
+}
+
+.person-photo {
     width: 100%;
-    height: 250px;
+    height: 300px;
     border: 2px solid var(--orange);
     margin: 0 auto;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
-.character-photo img {
+.person-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.person-name {
+    font-size: 18px;
+    color: var(--orange);
+    margin: 5px 0;
+}
+
+.person-age {
+    font-size: 16px;
+    color: white;
+}
+.person-universe {
+    font-size: 20px;
+    color: darkred;
 }
