--- a/css/core.css
+++ b/css/core.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    font-family: "Britannic Bold", sans-serif;
+    font-family: 'VALORANT', sans-serif;
     background: #c2d0d0;
 }
 
