--- a/css/home_works.css
+++ b/css/home_works.css
@@ -1,4 +1,7 @@
+body {
+    font-family: 'VALORANT', sans-serif;
 
+}
 /* GMAIL BLOCK */
 
 .gmail_block {
@@ -28,170 +31,104 @@
 }
 
 /* MOVE BLOCK */
-
 .move_block {
     background: black;
-    padding: 100px 0;
-}
-
-.inner_parent_block {
-    height: 400px;
-    width: 400px;
-    border: 1px solid var(--orange);
-    border-radius: 18px;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .parent_block {
-    height: 500px;
-    width: 500px;
-    border: 1px solid var(--orange);
+    height: 800px;
+    width: 100%;
     position: relative;
     margin: 0 auto;
+    background-image: url('https://cdn.oneesports.gg/cdn-data/2023/01/Valorant_Lotus_Episode6ActI_Map.jpg') ;
+    background-size: cover;
+    background-position:  center;
+    background-repeat: no-repeat;
+    border: 2px solid #ff4655;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(255, 70, 85, 0.5);
 }
+
 
 .child_block {
     position: absolute;
     top: 0;
-    width: 50px;
-    height: 50px;
-    background-color: red;
-}
-
-.inner_move_block {
-    margin-top: 50px;
-}
-
-/*----ANALOG CLOCK-----*/
-
-.clock {
-    --clock-size: 360px;
-    width: var(--clock-size);
-    height: var(--clock-size);
-    position: absolute;
-    inset: 0;
-    margin: auto;
+    left: 0;
+    width: 100px;
+    height: 100px;
+    background-image: url('https://media1.giphy.com/media/bGCfsOjRhHbYhUHhOu/giphy.webp?cid=ecf05e474ndnn6g8wuckgeaumkd71442pk7ucrgta1cswh34&ep=v1_gifs_search&rid=giphy.webp&ct=g');
+    background-size: cover;
+    background-position: center;
+    transition: transform 0.2s linear;
     border-radius: 50%;
-    color: white;
-}
-
-.spike {
-    position: absolute;
-    width: 8px;
-    height: 1px;
-    background: #fff9;
-    line-height: 20px;
-    transform-origin: 50%;
-    z-index: 5;
-    inset: 0;
-    margin: auto;
-    font-style: normal;
-    transform: rotate(var(--rotate)) translateX(var(--dail-size));
-}
-.spike:nth-child(5n+1) {
-    box-shadow: -7px 0 #fff9;
-}
-.spike:nth-child(5n+1):after {
-    content: attr(data-i);
-    position: absolute;
-    right: 22px;
-    top: -10px;
-    transition: 1s linear;
-    transform: rotate(calc( var(--dRotate) - var(--rotate)));
-}
-
-.seconds {
-    --dRotate: 0deg;
-    --dail-size: calc((var(--clock-size)/ 2) - 8px);
-    font-weight: 800;
-    font-size: 18px;
-    transform: rotate(calc( -1 * var(--dRotate)));
-    position: absolute;
-    inset: 0;
-    margin: auto;
-    transition: 1s linear;
-}
-
-.minutes {
-    --dail-size: calc((var(--clock-size)/ 2) - 65px);
-    font-size: 16px;
-    transform: rotate(calc( -1 * var(--dRotate)));
-    position: absolute;
-    inset: 0;
-    margin: auto;
-    transition: 1s linear;
-}
-
-.stop-anim {
-    transition: 0s linear;
-}
-.stop-anim .spike:after {
-    transition: 0s linear !important;
-}
-
-.hour {
-    font-size: 70px;
-    font-weight: 900;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.minute {
-    font-size: 36px;
-    font-weight: 900;
-    position: absolute;
-    background: #000;
-    z-index: 10;
-    right: calc(var(--clock-size)/ 4.5);
-    top: 50%;
-    transform: translateY(-50%);
-}
-.minute:after {
-    content: "";
-    position: absolute;
-    border: 2px solid #fff;
-    border-right: none;
-    height: 50px;
-    left: -10px;
-    top: 50%;
-    border-radius: 40px 0 0 40px;
-    width: calc(var(--clock-size)/ 2.75);
-    transform: translatey(-50%);
+    box-shadow: 0 0 12px rgba(255, 70, 85, 0.6);
 }
 
 
 /*-------STOP WATCH------ */
 
-.time {
-    color: white;
-    display: flex;
-    justify-content: center;
-    font-size: 80px;
-    height: 100px;
-    width: 100%;
-    border-bottom: 1px solid var(--orange);
-    margin-top: 40px;
-}
 
-.time_block {
-    display: flex;
-    width: 500px;
-    justify-content: center;
-}
 
-.stopwatch {
+
+.spike-defuse {
     padding: 100px 0;
     background: black;
+    color: #fff;
+    font-family: 'Valorant', sans-serif;
 }
 
-.time_buttons {
-    margin-top: 30px;
+h3 {
+    text-align: center;
+    color: #f04747;
+    font-size: 32px;
+}
+
+.defuse-bar {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
+    max-width: 600px;
+    height: 40px;
+    background: #222;
+    border: 2px solid #f04747;
+    margin: 30px auto;
+    position: relative;
+    overflow: hidden;
 }
 
+.progress {
+    background: #f04747;
+    height: 100%;
+    width: 0%;
+    transition: width 0.1s linear;
+    text-align: center;
+    line-height: 40px;
+    font-weight: bold;
+}
+
+.defuse-buttons {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+
+.btn {
+    padding: 10px 20px;
+    background: #f04747;
+    border: none;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 6px;
+    transition: background 0.3s;
+}
+
+.btn:hover {
+    background: #c73434;
+}
 /*--------CHARACTERS---------*/
 
 .characters {
